hphp/test/zend/good/ext/dom/tests/DOMDocumentFragment_appendXML_basic_001.php
<?php
$document = new DOMDocument;
$root = $document->createElement('root');
$document->appendChild($root);

$fragment = $document->createDocumentFragment();
$fragment->appendXML('<foo id="baz">bar</foo>');
$root->appendChild($fragment);

print $document->saveXML();
?>
