hphp/test/zend/bad/ext-spl/arrayObject_offsetExists_nullcheck.php
<?php
$ao = new ArrayObject(array('foo' => null));
var_dump($ao->offsetExists('foo'));

?>